--- a/src/common/AppHeader.css
+++ b/src/common/AppHeader.css
@@ -18,8 +18,8 @@
     width: 100%;
     box-shadow: 0 2px 8px #f0f1f2;
     /*-moz-box-shadow: 0 2px 8px #f0f1f2;*/
-    /*background-color: #f0f1f2;*/
-    /*border-bottom: solid;*/
+    background-color: #FFFFFF;
+    border-bottom: 1px solid #f0f1f2;
     z-index: 10;
     padding: 0;
 }
@@ -49,11 +49,13 @@
     font-size: 17px;
     font-weight: 600;
     color: rgba(0,0,0,0.85);
+    /*color: #FFFFFF;*/
 }
 
 .profile-menu .username-info {
     font-size: 14px;
     color: rgba(0,0,0,0.65);
+    /*color: #FFFFFF;*/
 }
 
 .dropdown-item {
